# docs/swagger.yaml
@@ -56,6 +56,8 @@ definitions:
         type: string
       hash:
         type: string
+      id:
+        type: integer
       ingressTime:
         type: string
       name:
@@ -63,9 +65,6 @@ definitions:
       path:
         description: full path to the file
         type: string
-      stormID:
-        description: ID field (kept as StormID for backward compatibility)
-        type: integer
       ulid:
         description: Have a smaller (than hash) id that can be used in URL's, hopefully
           speed things up
